# NagyHazi

./: CMakeLists.txt  README.md  main.c
.github/workflows/: build-and-release.yml
Extras/: map.csv
docs/: felhasznaloi_documentacio.md  programozoi_documentacio.md
docs/pdf/: Programozói dokumentáció.docx
src/: globals.h  main.c  map.c  map.h  menu.c  menu.h  platform.c  platform.h  player.c  player.h  render.c  render.h  screen.c  screen.h
